# FG-interpreter-client-server-simulator

./: BinaryExpression.h  Bind.cpp  Bind.h  BindCommand.cpp  BindCommand.h  BoolSingelton.h  BoundMap.h  CMakeLists.txt  Command.h  CommandAssign.cpp  CommandAssign.h  CommandVar.cpp  CommandVar.h  CommandenterC.cpp  CommandenterC.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DataReaderServer.cpp  DataReaderServer.h  DictionaryPath.h  Divide.cpp  Divide.h  ExitCommand.cpp  ExitCommand.h  Expression.h  ExpressionCommand.cpp  ExpressionCommand.h  ExpressionFactory.cpp  ExpressionFactory.h  IfCommand.cpp  IfCommand.h  LexerParser.cpp  LexerParser.h  Minus.cpp  Minus.h  Multiply.cpp  Multiply.h  Number.cpp  (+22 more)
